Fix shifting columns when context menu is expanded.

--- a/kronofoto/static/assets/scss/components/_collection.scss
+++ b/kronofoto/static/assets/scss/components/_collection.scss
@@ -5,7 +5,8 @@
 
   &--list {
     margin-top: -20px;
-    column-fill: balance;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     > div {
       border-bottom: 1px solid #DDDDDD;
       position: relative;
